--- a/book.html
+++ b/book.html
@@ -21,18 +21,18 @@
     <div class="instruction">Flip the page to read it</div>
     <div class="book">
       <div class="page cover-front" onclick="movePage(this, 1)">
-        <h1>My love Anjali💕</h1>
+        <h1>My love Juhi💕</h1>
         <img src="/IMG_5274.JPG" height="350" width="290" alt="">
         <div class="hat"><i class="fab fa-pied-piper-hat"></i></div>
         <br>
         <br><br>
         <br>
         <br>
-        <h2>@_.codeash_.</h2>
+        <h2>@_.StarRy_.</h2>
       </div>
       <div class="page cover-front" onclick="movePage(this, 2)"></div>
       <div class="page text-page" onclick="movePage(this, 3)">
-        <p>Dear anjali❤️, this is for you 🤞💖</p>
+        <p>Dear juhi❤️, this is for you 🤞💖</p>
         <p>
           "Every moment spent with you feels like <br>
            a chapter from my favorite book 🥹,<br>
@@ -55,7 +55,7 @@
       </div>
       <div class="page text-page" onclick="movePage(this, 4)">
         <p>
-          tera meri life mai aana or aake aise bass jana <br>
+          tera na meri life mai aana or aake aise bass jana <br>
           you know what jb bhi aap mujhse ladte ho ya naraj hote ho <br>
           mai kaise rehta hu ye mujhe pta h 😭 bss express nhi krta mai 
           <br> i love you to the moon and sky 🤞💖
@@ -66,7 +66,7 @@
           mai btata hu 8 november 😭 pta hai kyuuuu??? kyuki uss din <br>
           meri or teri bht jyada baat hui hamne pehli baar itti der <br>
           baat ki 🤞 and i'm so blessed to have a partner like u 😭 <br>
-          tu muskan best hai and hannnnn i Love u <br>
+          teri muskan best hai and hannnnn i Love u <br>
           again <br>
           i love u 😭🤞💖
         </p>
@@ -97,7 +97,7 @@
         <p>
           i love u bby love u love u love u 😘
           <br>
-          logo ka gya hoga 2022 kharab mera to best tha <br>
+          logo ka chal raha hoga 2025 kharab mera to best tha <br>
           why <br>
           because god gifted me you😭🤞
         </p>
@@ -118,7 +118,7 @@
 
         </p>
         <p>
-          pta hai anjali❤️ mai aisa ladka nhi tha, <br>
+          pta hai juhi❤️ mai aisa ladka nhi tha, <br>
           tujhe bhi pta hai mujhe pharak nhi padta kon aata hai or kon jata hai, <br>
           meri jindagi se mgr pta nhi kyu Tujhse pharak padne laga or bht jyada padne laga.
           mai jyada to nhi jaanta mgr itta jaanta hu ki nhi reh skta mai tere bina ab,
@@ -129,18 +129,18 @@
       </div>
       <div class="page text-page">
         <p>
-          bss anjali❤️ yahi bolunga ki bht pyaar krta tha,hu or rahunga aapse <br>
-          apni aakhri saas takk. anjali❤️ i love u bht saara bss aap meri ladai dekhte ho kbhi mera pyaar dekha hai, 
-          kitta krta hu 🥺 , once again i love you anjali💖
+          bss juhi❤️ yahi bolunga ki bht pyaar krta tha,hu or rahunga aapse <br>
+          apni aakhri saas takk. juhi❤️ i love u bht saara bss aap meri ladai dekhte ho kbhi mera pyaar dekha hai, 
+          kitta krta hu 🥺 , once again i love you juhi💖
         </p>
         <p>......This is Not limited here</p>
-        <p>You are My Everything ashish💖.</p>
+        <p>You are My Everything StarRy💖.</p>
 
-        <h2>anjali❤️ ji please accept my request🥹</h2>
+        <h2> juhi❤️ ji please accept my request🥹</h2>
         <h2>and reply on this post</h2>
         <br />
         <img src="https://media.tenor.com/zGm5acSjHCIAAAAM/cat-begging.gif" />
-        <button id="botao1">Yes ashish🥺</button>
+        <button id="botao1">Yes yes starRy🥺</button>
       </div>
       <div class="page"></div>
       <div class="page"></div>
@@ -239,7 +239,7 @@
 
     <script>
       document.getElementById("botao1").addEventListener("click", function () {
-        alert("you're always in my heart anjali❤️ , Drop a Message when you are Free ..");
+        alert("you're always in my heart juhi❤️ , Drop a Message when you are Free ..");
       });
     </script>
     <script src="ashish.js"></script>
