--- a/index.html
+++ b/index.html
@@ -1,18 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>book for Juhi💕</title>
-    <link rel="stylesheet" href="ashish.css" />
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Book for Juhi💕</title>
+    <link rel="stylesheet" href="ashish.css">
+    <style>
+        /* Background Animation */
+        body {
+            background: linear-gradient(45deg, #ff9a9e, #fad0c4, #fad0c4, #fbc2eb);
+            background-size: 400% 400%;
+            animation: gradientBG 10s ease infinite;
+            font-family: 'Poppins', sans-serif;
+            text-align: center;
+            color: white;
+            margin: 0;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        @keyframes gradientBG {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        /* Container Styling */
+        .container {
+            background: rgba(255, 255, 255, 0.2);
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+            backdrop-filter: blur(10px);
+            position: relative;
+            max-width: 350px;
+        }
+
+        /* Animated Ribbon */
+        .ribbon {
+            position: absolute;
+            top: -10px;
+            left: -10px;
+            width: 100px;
+            height: 100px;
+            background: linear-gradient(135deg, #ff758c, #ff7eb3);
+            transform: rotate(-45deg);
+            box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+            animation: ribbonWaves 2s infinite alternate;
+        }
+
+        @keyframes ribbonWaves {
+            0% { transform: rotate(-45deg) scale(1); }
+            100% { transform: rotate(-45deg) scale(1.1); }
+        }
+
+        /* Text Styling */
+        p {
+            font-size: 18px;
+            font-weight: bold;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Glowing Button */
+        .tag a {
+            display: inline-block;
+            text-decoration: none;
+            font-size: 20px;
+            font-weight: bold;
+            color: white;
+            background: linear-gradient(45deg, #ff0844, #ffb199);
+            padding: 12px 20px;
+            border-radius: 50px;
+            box-shadow: 0px 4px 15px rgba(255, 78, 120, 0.5);
+            transition: 0.3s ease-in-out;
+        }
+
+        .tag a:hover {
+            background: linear-gradient(45deg, #ff3d7f, #ffb6c1);
+            transform: scale(1.1);
+            box-shadow: 0px 8px 20px rgba(255, 78, 120, 0.7);
+        }
+    </style>
+</head>
+<body>
     <div class="container">
-      <p> motki Please click on this i"ve maid something to make you feel special👆</p>
-      <div class="ribbon"></div>
-      <div class="tag">
-        <a href="book.html"> chasmish🫀</a>
-      </div>
+        <p>Motki, please click on this! I’ve made something special for you ❤️</p>
+        <div class="ribbon"></div>
+        <div class="tag">
+            <a href="book.html">Chasmish 🫀</a>
+        </div>
     </div>
-  </body>
+</body>
 </html>
