--- a/book.html
+++ b/book.html
@@ -75,19 +75,24 @@
       </div>
       <div class="page text-page" onclick="movePage(this, 5)">
         <p>
-          ab kuch shayari for you <br>
-          tareef ab bta mai teri karu ya tujhe banane vale ki
+          𝑨𝑩 𝑲𝑼𝑪𝑯 𝑺𝑨𝒀𝑨𝑹𝑰 𝑭𝑶𝑹 𝒀𝑶𝑼 <br>
+          tareef  bta mai teri karu ya tujhe banane vale ki
           <br>
-          tujhe dekh ke aajati hai mre hoto pe laali kya teri saari bhn or dost sb banegi meri saali??
+          tujhe dekh ke aajati hai mre hoto pe laali kya teri saari bhn or dost banegi meri saali🙃😘??
           <br>
-          Tujhse baat krke dil ko aata hai sukun anjali❤️ mai tere saath manana chahta hu honeymoon😘
+          Tujhse baat krke dil ko aata hai sukun juhi❤️ mai tere saath manana chahta hu honeymoon🤪😘
         </p>
         <p>
-         mann krta hai ki bss tere se hi baat krta rahu pyaar krta rahu <br>
-         chahe duniya mai kuch ho jaaye bss tera hi bann ke rehna chahta hu 😭🤞
-         <br> tu mere shareer ka vo hissa bann chuki hai ab <br>
-         jo na rahe to mai jee nahi skta <br>
-         to rahegi na mere saath or rakhegi na mujhe jinda??
+    Mann karta hai bas tujhse baat karun, sirf tujhse pyaar karun, <br>
+    Duniya kuch bhi kahe, main sirf tera izhaar karun. 💕<br><br>
+    
+    Tu meri rooh ka ehsaas ban chuki hai, <br>
+    Mere dil ki har ek saans ban chuki hai. <br>
+    Tere bina jeena ab mumkin nahi, <br>
+    Tu hi meri har ek aas ban chuki hai. 💖<br><br>
+    
+    Toh rahegi na mere saath sada? 🤞<br>
+    Rakhegi na mujhe jinda apni har ek ada? 😭❤️
         </p>
         <p>
          ab bta tu tareef krne ko bolti hai mai to tere <br>
@@ -97,7 +102,7 @@
         <p>
           i love u bby love u love u love u 😘
           <br>
-          logo ka chal raha hoga 2025 kharab mera to best tha <br>
+          logo ka chal raha hoga 2025 kharab mera to best hai <br>
           why <br>
           because god gifted me you😭🤞
         </p>
