--- a/book.html
+++ b/book.html
@@ -136,7 +136,7 @@
         <p>
           bss juhi❤️ yahi bolunga ki bht pyaar krta tha,hu or rahunga aapse <br>
           apni aakhri saas takk. juhi❤️ i love u bht saara bss aap meri ladai dekhte ho kbhi mera pyaar dekha hai, 
-          kitta krta hu 🥺 , once again i love you juhi💖
+          kitta krta hu 🥺 , once again i love you kishmish💖
         </p>
         <p>......This is Not limited here</p>
         <p>You are My Everything StarRy💖.</p>
@@ -144,7 +144,7 @@
         <h2> juhi❤️ ji please accept my request🥹</h2>
         <h2>and reply on this post</h2>
         <br />
-        <img src="https://media.tenor.com/zGm5acSjHCIAAAAM/cat-begging.gif" />
+        <img src="https://tenor.com/p0IopT9vxuK.gif" />
         <button id="botao1">Yes yes starRy🥺</button>
       </div>
       <div class="page"></div>
