--- a/book.html
+++ b/book.html
@@ -53,7 +53,8 @@
         <br /><br /><br />
         <p>Please turn the page..</p>
       </div>
-      <div class="page text-page" onclick="movePage(this, 4)">
+      <div class="page cover-front" onclick="movePage(this, 4)"></div>
+      <div class="page text-page" onclick="movePage(this, 5)">
         <p>
           tera na meri life mai aana or aake aise bass jana <br>
           you know what jb bhi aap mujhse ladte ho ya naraj hote ho <br>
@@ -73,7 +74,8 @@
        
         
       </div>
-      <div class="page text-page" onclick="movePage(this, 5)">
+      <div class="page cover-front" onclick="movePage(this, 6)"></div>
+      <div class="page text-page" onclick="movePage(this, 7)">
         <p>
           𝑨𝑩 𝑲𝑼𝑪𝑯 𝑺𝑨𝒀𝑨𝑹𝑰 𝑭𝑶𝑹 𝒀𝑶𝑼 <br>
           tareef  bta mai teri karu ya tujhe banane vale ki
@@ -107,9 +109,10 @@
           because god gifted me you😭🤞
         </p>
       </div>
-      <div class="page text-page" onclick="movePage(this, 6)">
+      <div class="page cover-front" onclick="movePage(this, 8)"></div>
+      <div class="page text-page" onclick="movePage(this, 9)">
         <p>
-         i looooooooooooovvvvvvvvvvveeeeeeeeeeeee youuu so much anjali❤️ anjali❤️
+         i looooooooooooovvvvvvvvvvveeeeeeeeeeeee youuu so much motki❤️ kishmish❤️
          <br>
          you are the most precious gift in my life <br>
          so i can't take any risk to loose you😭🤞
@@ -144,7 +147,7 @@
         <h2> juhi❤️ ji please accept my request🥹</h2>
         <h2>and reply on this post</h2>
         <br />
-        <img src="https://tenor.com/p0IopT9vxuK.gif" />
+        <img src="Graph_Stickers_5_6100530517415830452 (2).webm" />
         <button id="botao1">Yes yes starRy🥺</button>
       </div>
       <div class="page"></div>
