--- a/book.html
+++ b/book.html
@@ -134,6 +134,8 @@
           pta hai mai ab tere bina kisi or ka ho hi nhi skta or rojj yahi sochta hu ki meri muskan ne aisa 
           soch bhi kaise liya😭
         </p>
+      </div><div class="page cover-front" onclick="movePage(this, 10)">
+        
       </div>
       <div class="page text-page">
         <p>
