--- a/book.html
+++ b/book.html
@@ -149,7 +149,7 @@
         <h2> juhi❤️ ji please accept my request🥹</h2>
         <h2>and reply on this post</h2>
         <br />
-        <img src="Graph_Stickers_5_6100530517415830452 (2).webm" />
+        <img src="Graph_Stickers_5_6100530517415830452(2).gif" />
         <button id="botao1">Yes yes starRy🥺</button>
       </div>
       <div class="page"></div>
