--- a/book.html
+++ b/book.html
@@ -108,6 +108,7 @@
           why <br>
           because god gifted me you😭🤞
         </p>
+        <img src="18ea9e8b6b921ba7ce0081c48b802670.gif" />
       </div>
       <div class="page cover-front" onclick="movePage(this, 8)"></div>
       <div class="page text-page" onclick="movePage(this, 9)">
