--- a/book.html
+++ b/book.html
@@ -107,6 +107,14 @@
           logo ka chal raha hoga 2025 kharab mera to best hai <br>
           why <br>
           because god gifted me you😭🤞
+          <style>
+    .gif-size {
+        width: 360px;
+        height: 215px;
+    }
+</style>
+
+<img class="gif-size" src="Graph_Stickers_5_6100530517415830452(2).gif" />
         </p>
       </div>
       <div class="page cover-front" onclick="movePage(this, 8)"></div>
@@ -149,7 +157,7 @@
         <h2> juhi❤️ ji please accept my request🥹</h2>
         <h2>and reply on this post</h2>
         <br />
-        <img src="18ea9e8b6b921ba7ce0081c48b802670.gif" />
+        <img src="" />
         <button id="botao1">Yes yes starRy🥺</button>
       </div>
       <div class="page"></div>
