--- a/book.html
+++ b/book.html
@@ -69,7 +69,7 @@
           baat ki 🤞 and i'm so blessed to have a partner like u 😭 <br>
           teri muskan best hai and hannnnn i Love u <br>
           again <br>
-          i love u 😭🤞💖
+          i love u 😭🤞💖<img src="18ea9e8b6b921ba7ce0081c48b802670.gif" width="360" height="215" />
         </p>
        
         
@@ -113,8 +113,6 @@
         height: 215px;
     }
 </style>
-
-<img class="gif-size" src="Graph_Stickers_5_6100530517415830452(2).gif" />
         </p>
       </div>
       <div class="page cover-front" onclick="movePage(this, 8)"></div>
