--- a/book.html
+++ b/book.html
@@ -128,7 +128,7 @@
           if anyone say choose b/w money and you i'll choose money 🤣 <br>
           majjak tha 🤣 , i'll choose you <br>
           you're my perfect partner and most important person in my life🥺 is you 
-          anu 
+          juhaaa marja
 
         </p>
         <p>
@@ -137,7 +137,7 @@
           meri jindagi se mgr pta nhi kyu Tujhse pharak padne laga or bht jyada padne laga.
           mai jyada to nhi jaanta mgr itta jaanta hu ki nhi reh skta mai tere bina ab,
           tune uss din keh diya ki meri shaadi kahi or hogyi to kya mai tujhe bhul jaaunga ????
-          pta hai mai ab tere bina kisi or ka ho hi nhi skta or rojj yahi sochta hu ki meri muskan ne aisa 
+          pta hai mai ab tere bina kisi or ka ho hi nhi skta or rojj yahi sochta hu ki meri chasmishiya ne aisa 
           soch bhi kaise liya😭
         </p>
       </div><div class="page cover-front" onclick="movePage(this, 10)">
