--- a/book.html
+++ b/book.html
@@ -139,6 +139,7 @@
           tune uss din keh diya ki meri shaadi kahi or hogyi to kya mai tujhe bhul jaaunga ????
           pta hai mai ab tere bina kisi or ka ho hi nhi skta or rojj yahi sochta hu ki meri chasmishiya ne aisa 
           soch bhi kaise liya😭
+          <img src="giphy.gif" width="360" height="215" />
         </p>
       </div><div class="page cover-front" onclick="movePage(this, 10)">
         
