--- a/book.html
+++ b/book.html
@@ -158,6 +158,41 @@
         <br />
         <img src="" />
         <button id="botao1">Yes yes starRy🥺</button>
+        <style>
+  .telegram-strip {
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: linear-gradient(90deg, #0088cc, #00aced);
+    color: white;
+    padding: 8px 15px;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-decoration: none;
+    animation: bounce 1.5s infinite;
+    transition: opacity 0.3s ease-in-out;
+  }
+
+  .telegram-strip:hover {
+    opacity: 0.8;
+  }
+
+  @keyframes bounce {
+    0%, 100% {
+      transform: translateX(-50%) translateY(0);
+    }
+    50% {
+      transform: translateX(-50%) translateY(-5px);
+    }
+  }
+</style>
+
+<a href="https://t.me/starRy71" class="telegram-strip" target="_blank">
+  Click to Back on Chat
+</a>
       </div>
       <div class="page"></div>
       <div class="page"></div>
