--- a/book.html
+++ b/book.html
@@ -156,7 +156,7 @@
         <h2> juhi❤️ ji please accept my request🥹</h2>
         <h2>and reply on this post</h2>
         <br />
-        <img src="" />
+        <img src="e968a0ecb7a4ba3101b0e2df6aa8819c.gif" />
         <button id="botao1">Yes yes starRy🥺</button>
         <style>
   .telegram-strip {
