--- a/book.html
+++ b/book.html
@@ -194,7 +194,14 @@
   Click to Back on Chat
 </a>
       </div>
-      <div class="page"></div>
+      <div class="page text-page" onclick="movePage(this, 10)">
+        <div class="page text-page" onclick="movePage(this, 11)">
+ <p></p>Every word I’ve written here is a piece of my heart💜, 
+        but this story isn’t complete without you. Now, it’s your turn to write—because our love is a story we tell together.
+        </p>
+          
+          
+          <div class="page"></div>
       <div class="page"></div>
       <div class="page"></div>
       <div class="page"></div>
