--- a/book.html
+++ b/book.html
@@ -195,12 +195,13 @@
 </a>
       </div>
       <div class="page text-page" onclick="movePage(this, 10)">
+      </div>
         <div class="page text-page" onclick="movePage(this, 11)">
  <p></p>Every word I’ve written here is a piece of my heart💜, 
         but this story isn’t complete without you. Now, it’s your turn to write—because our love is a story we tell together.
         </p>
           
-          
+        </div>
           <div class="page"></div>
       <div class="page"></div>
       <div class="page"></div>
