--- a/book.html
+++ b/book.html
@@ -194,14 +194,45 @@
   Click to Back on Chat
 </a>
       </div>
-      <div class="page text-page" onclick="movePage(this, 10)">
+      <div class="page text-page" onclick="movePage(this, 11)">
+  <p>
+    Juhi❤️, ek baat bataun? <br> 
+    Pata hai, jab bhi tu offline hoti hai ya busy hoti hai na, <br> 
+    tab bhi mera mann tujhi me atka rehta hai 😭, <br>
+    matlab kuch bhi karu, dimaag me bas tu hi chalti rehti hai.  
+  </p>
+  
+  <p>
+    Tujhse baat na ho to lagta hai jaise duniya hi ruk gayi ho... <br> 
+    Arre, mujhe to tujhse ladai bhi pasand hai 😌, kyunki pata hota hai <br> 
+    ki phir tu manegi bhi aur mujhe manani bhi padegi. 😂❤️  
+  </p>
+  
+  <p>
+    Juhi, yaad hai woh din jab tune mujhe pehli baar <br>  
+    "Motu" bola tha? 🤧 Pta hai, tab mujhe lag raha tha <br>  
+    "arre yeh mujhe sach me motu samajhti hai kya?" 😂  
+  </p>
+  
+  <p>
+    Par ab, ab yeh naam sunke ajeeb si khushi hoti hai. ❤️ <br>  
+    Kyunki woh sirf tu hi bol sakti hai, aur kisi ka haq nahi hai! 😌  
+  </p>
+  
+  <p>
+    <strong>Jindagi me bahut kuch dekha, lekin itna pyaara insaan nahi dekha. 🥺❤️</strong>  
+    <br> Sirf ek cheez bolunga: mujhe chhodke kabhi mat jaana, okay? 🤞💖  
+  </p>
+  
+  <p>......This is Not limited here</p>
+  <p>You are My Forever, My Love StarRy💖.</p>
+
+  <h2>Juhi❤️, please say something...🥹</h2>
+  <h2>I'll be waiting...</h2>
+  <br />
+  <img src="heart.gif" width="50" height="50" />
+  <button id="botao2">Haan haan motu 😌</button>
       </div>
-        <div class="page text-page" onclick="movePage(this, 11)">
- <p></p>Every word I’ve written here is a piece of my heart💜, 
-        but this story isn’t complete without you. Now, it’s your turn to write—because our love is a story we tell together.
-        </p>
-          
-        </div>
           <div class="page"></div>
       <div class="page"></div>
       <div class="page"></div>
