--- a/book.html
+++ b/book.html
@@ -141,10 +141,8 @@
           soch bhi kaise liya😭
           <img src="giphy.gif" width="260" height="200" />
         </p>
-      </div><div class="page cover-front" onclick="movePage(this, 10)">
-        
-      </div>
-      <div class="page text-page">
+      </div><div class="page cover-front" onclick="movePage(this, 10)"></div>
+      <div class="page text-page" onclick="movePage(this, 11)">
         <p>
           bss juhi❤️ yahi bolunga ki bht pyaar krta tha,hu or rahunga aapse <br>
           apni aakhri saas takk. juhi❤️ i love u bht saara bss aap meri ladai dekhte ho kbhi mera pyaar dekha hai, 
@@ -194,44 +192,28 @@
   Click to Back on Chat
 </a>
       </div>
-      <div class="page text-page" onclick="movePage(this, 11)">
-  <p>
-    Juhi❤️, ek baat bataun? <br> 
-    Pata hai, jab bhi tu offline hoti hai ya busy hoti hai na, <br> 
-    tab bhi mera mann tujhi me atka rehta hai 😭, <br>
-    matlab kuch bhi karu, dimaag me bas tu hi chalti rehti hai.  
-  </p>
-  
-  <p>
-    Tujhse baat na ho to lagta hai jaise duniya hi ruk gayi ho... <br> 
-    Arre, mujhe to tujhse ladai bhi pasand hai 😌, kyunki pata hota hai <br> 
-    ki phir tu manegi bhi aur mujhe manani bhi padegi. 😂❤️  
-  </p>
-  
-  <p>
-    Juhi, yaad hai woh din jab tune mujhe pehli baar <br>  
-    "Motu" bola tha? 🤧 Pta hai, tab mujhe lag raha tha <br>  
-    "arre yeh mujhe sach me motu samajhti hai kya?" 😂  
-  </p>
-  
-  <p>
-    Par ab, ab yeh naam sunke ajeeb si khushi hoti hai. ❤️ <br>  
-    Kyunki woh sirf tu hi bol sakti hai, aur kisi ka haq nahi hai! 😌  
-  </p>
-  
-  <p>
-    <strong>Jindagi me bahut kuch dekha, lekin itna pyaara insaan nahi dekha. 🥺❤️</strong>  
-    <br> Sirf ek cheez bolunga: mujhe chhodke kabhi mat jaana, okay? 🤞💖  
-  </p>
-  
-  <p>......This is Not limited here</p>
-  <p>You are My Forever, My Love StarRy💖.</p>
+      <div class="page text-page" onclick="movePage(this, 12)"></div>
+      <div class="page text-page" onclick="movePage(this, 13)">
 
-  <h2>Juhi❤️, please say something...🥹</h2>
-  <h2>I'll be waiting...</h2>
-  <br />
-  <img src="heart.gif" width="50" height="50" />
-  <button id="botao2">Haan haan motu 😌</button>
+
+
+      </div>
+      <div class="page text-page" onclick="movePage(this, 14)"></div>
+      <div class="page text-page" onclick="movePage(this, 15)">
+  <p>
+    Hey motu 👀 this is for you ❤️  
+    <br> Ek ladka jo puri tarh pgl hai 🤧  
+    <br> Chote chote bat pe gussa karna 😌 naraj hona uff tera mood swings 😁  
+  </p>
+  
+  <p>
+    To.. baat usa din se lake ajj ki jab tune mujhe hi ka msg kiya tha  
+    or ab tera upar essay likhne tk ki ki baat  
+  </p>
+  
+  <p>
+    Pata nai tune kya socha ke msg kiya tha 😂 .......  
+  </p>
       </div>
           <div class="page"></div>
       <div class="page"></div>
