--- a/book.html
+++ b/book.html
@@ -193,11 +193,7 @@
 </a>
       </div>
       <div class="page text-page" onclick="movePage(this, 12)"></div>
-      <div class="page text-page" onclick="movePage(this, 13)">
-
-
-
-      </div>
+      <div class="page text-page" onclick="movePage(this, 13)"></div>
       <div class="page text-page" onclick="movePage(this, 14)"></div>
       <div class="page text-page" onclick="movePage(this, 15)">
   <p>
@@ -213,8 +209,7 @@
   
   <p>
     Pata nai tune kya socha ke msg kiya tha 😂 .......  
-  </p>
-      </div>
+  </p> </div>
           <div class="page"></div>
       <div class="page"></div>
       <div class="page"></div>
