--- a/book.html
+++ b/book.html
@@ -8,51 +8,60 @@
   </head>
   <body>
     <div class="motive">
-      <h2>
-        1 book kya aap pe to zindagi likh du💕
-          <br />
-          <br>
-        My lifetime crush💕 aapke liye kuch bhi😻.
-        <br />
-        <br>
-        <span> You're so sweet💖.</span>
-      </h2>
-    </div>
-    <div class="instruction">Flip the page to read it</div>
-    <div class="book">
-      <div class="page cover-front" onclick="movePage(this, 1)">
-        <h1>My love Juhi💕</h1>
-        <img src="MixCollage-31-Jan-2025-12-05-AM-9674.jpg" height="350" width="290" alt="">
-        <div class="hat"><i class="fab fa-pied-piper-hat"></i></div>
-        <br>
-        <br><br>
-        <br>
-        <br>
-        <h2>@_.StarRy_.</h2>
-      </div>
-      <div class="page cover-front" onclick="movePage(this, 2)"></div>
-      <div class="page text-page" onclick="movePage(this, 3)">
-        <p>Dear juhi❤️, this is for you 🤞💖</p>
-        <p>
-          "Every moment spent with you feels like <br>
-           a chapter from my favorite book 🥹,<br>
-           and I can't help but want to write more stories together.🫀 <br> Would you do me the honor of allowing me 🫶<br>
-            to be your co-author in this😚 <br>
-             beautiful journey called life🥹💕?"
-             <br>
-             mai sach mai phir bhi tumhe chahunga🥹
-             <br>or hamesha chahta rahunga🫀
+    <div class="motive">
+  <h2>
+    1 book kya aap pe to zindagi likh du💕
+    <br /><br />
+    My lifetime crush💕 aapke liye kuch bhi😻.
+    <br /><br />
+    <span>You're so sweet💖.</span>
+  </h2>
+</div>
 
-        </p>
-        
-        <iframe width="360" height="215" src="https://www.youtube.com/embed/_iktURk0X-A?si=VjSw03MWgZimF5ju" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        
-        <br /><br />
-        <p>𝑵𝑶𝑻𝑬:- 𝑷𝑳𝑨𝒀 𝑻𝑯𝑬 𝑽𝑰𝑫𝑬𝑶 𝑩𝑬𝑭𝑶𝑹𝑬 𝑹𝑬𝑨𝑫𝑰𝑵𝑮 𝑭𝑼𝑹𝑻𝑯𝑬𝑹🙃</p>
+<div class="instruction">Flip the page to read it</div>
 
-        <br /><br /><br />
-        <p>Please turn the page..</p>
-      </div>
+<div class="book">
+  <div class="page cover-front" onclick="movePage(this, 1)">
+    <h1>My love Juhi💕</h1>
+    <img src="MixCollage-31-Jan-2025-12-05-AM-9674.jpg" height="350" width="290" alt="Collage of special moments">
+    <div class="hat"><i class="fab fa-pied-piper-hat"></i></div>
+    <br /><br /><br /><br /><br />
+    <h2>@_.StarRy_.</h2>
+  </div>
+
+  <div class="page cover-back" onclick="movePage(this, 2)"></div> 
+
+  <div class="page text-page" onclick="movePage(this, 3)">
+    <p>Dear Juhi❤️, this is for you 🤞💖</p>
+    <p>
+      "Every moment spent with you feels like <br />
+      a chapter from my favorite book 🥹,<br />
+      and I can't help but want to write more stories together.🫀 <br />
+      Would you do me the honor of allowing me 🫶<br />
+      to be your co-author in this 😚 <br />
+      beautiful journey called life 🥹💕?"
+      <br /><br />
+      Mai sach mai phir bhi tumhe chahunga 🥹 <br />
+      Aur hamesha chahta rahunga 🫀
+    </p>
+
+    <iframe 
+      width="360" 
+      height="215" 
+      src="https://www.youtube.com/embed/_iktURk0X-A?si=VjSw03MWgZimF5ju" 
+      title="YouTube video player" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+      referrerpolicy="strict-origin-when-cross-origin" 
+      allowfullscreen>
+    </iframe>
+
+    <br /><br />
+    <p><strong>NOTE:</strong> Play the video before reading further 🙃</p>
+    <br /><br /><br />
+    <p>Please turn the page...</p>
+  </div>
+</div>
       <div class="page cover-front" onclick="movePage(this, 4)"></div>
       <div class="page text-page" onclick="movePage(this, 5)">
         <p>
