--- a/book.html
+++ b/book.html
@@ -136,7 +136,7 @@
         </p>
       </div>
        <div class="page cover-front" onclick="movePage(this, 10)"></div>
-       <div class="page cover-front" onclick="movePage(this, 11)"></div>
+       <div class="page cover-front" onclick="movePage(this, 11)">
         <p>
           bss juhi❤️ yahi bolunga ki bht pyaar krta tha,hu or rahunga aapse <br>
           apni aakhri saas takk. juhi❤️ i love u bht saara bss aap meri ladai dekhte ho kbhi mera pyaar dekha hai, 
@@ -152,6 +152,11 @@
         <button id="botao1">Yes yes starRy🥺</button>
       
       </div>
+
+       <div class="page cover-front" onclick="movePage(this, 10)">
+<p>jdwhdbskdjssdjhsjdgwhbdjwhdwhdghsgshdhjskgchbjv</p>
+         
+       </div>
       <div class="page"></div>
       <div class="page"></div>
       <div class="page"></div>
