--- a/book.html
+++ b/book.html
@@ -150,9 +150,10 @@
         <br />
         <img src="https://media.tenor.com/zGm5acSjHCIAAAAM/cat-begging.gif" />
         <button id="botao1">Yes yes starRy🥺</button>
-    
       </div>
-      <div class="page text-page"></div>
+      <div class="page cover-front" onclick="movePage(this, 12)"></div>
+       <div class="page cover-front" onclick="movePage(this, 13)"></div>
+      <div class="page"></div>
       <div class="page"></div>
       <div class="page"></div>
       <div class="page"></div>
