--- a/book.html
+++ b/book.html
@@ -150,7 +150,7 @@
         <button id="botao1">Yes yes starRy🥺</button>
       </div>
       <div class="page cover-front" onclick="movePage(this, 12)"></div>
-       <div class="page cover-front" onclick="movePage(this, 13)">
+       <div class="page text-page">
          Hey motu 👀 this is for you ❤️
  Ek ladka jo puri tarh pgl hai 🤧
 Chote chote bat pe gussa karna 😌 naraj hona uff tera mood swings 😁
