--- a/book.html
+++ b/book.html
@@ -134,7 +134,7 @@
         </p>
       </div>
        <div class="page cover-front" onclick="movePage(this, 10)"></div>
-       <div class="page cover-front" onclick="movePage(this, 11)">
+       <div class="page text-page">
         <p>
           bss juhi❤️ yahi bolunga ki bht pyaar krta tha,hu or rahunga aapse <br>
           apni aakhri saas takk. juhi❤️ i love u bht saara bss aap meri ladai dekhte ho kbhi mera pyaar dekha hai, 
