--- a/book.html
+++ b/book.html
@@ -149,14 +149,14 @@
         <img src="https://media.tenor.com/zGm5acSjHCIAAAAM/cat-begging.gif" />
         <button id="botao1">Yes yes starRy🥺</button>
       </div>
-      <div class="page cover-front" onclick="movePage(this, 12)"></div>
+     <!-- <div class="page cover-front" onclick="movePage(this, 12)"></div>
        <div class="page text-page">
          Hey motu 👀 this is for you ❤️
  Ek ladka jo puri tarh pgl hai 🤧
 Chote chote bat pe gussa karna 😌 naraj hona uff tera mood swings 😁
 To.. baat usa din se lake ajj ki jab tune mujhe hi ka msg kiya tha or ab tera upar essay likhne tk ki ki baat
 Pata nai tune kya socha ke msg kiya tha 😂 .......
-       </div>
+       </div> -->
       <div class="page"></div>
       <div class="page"></div>
       <div class="page"></div>
