--- a/book.html
+++ b/book.html
@@ -23,14 +23,14 @@
       <div class="page cover-front" onclick="movePage(this, 1)">
         <h1>My love Juhi💕</h1>
         <img src="MixCollage-31-Jan-2025-12-05-AM-9674.jpg" height="350" width="290" alt="">
-        <div class="hat"><i class="fab fa-pied-piper-hat"></i></div>
+       <!-- <div class="hat"><i class="fab fa-pied-piper-hat"></i></div>-->
         <br>
         <br><br>
         <br>
         <br>
         <h2>@_.StarRy_.</h2>
       </div>
-      <div class="page cover-front" onclick="movePage(this, 2)"></div>
+      <div class="page text-page" onclick="movePage(this, 2)"></div>
       <div class="page text-page" onclick="movePage(this, 3)">
         <p>Dear juhi❤️, this is for you 🤞💖</p>
         <p>
@@ -53,7 +53,7 @@
         <br /><br /><br />
         <p>Please trun the page..</p>
       </div>
-       <div class="page cover-front" onclick="movePage(this, 4)"></div>
+       <div class="page text-page" onclick="movePage(this, 4)"></div>
       <div class="page text-page" onclick="movePage(this, 5)">
         <p>
           tera na meri life mai aana or aake aise bass jana <br>
@@ -72,7 +72,7 @@
           i love u 😭🤞💖
         </p>  
       </div>
-       <div class="page cover-front" onclick="movePage(this, 6)"></div>
+       <div class="page text-page" onclick="movePage(this, 6)"></div>
       <div class="page text-page" onclick="movePage(this, 7)">
         <p>
           𝑨𝑩 𝑲𝑼𝑪𝑯 𝑺𝑨𝒀𝑨𝑹𝑰 𝑭𝑶𝑹 𝒀𝑶𝑼 <br>
@@ -107,7 +107,7 @@
           because god gifted me you😭🤞
         </p>
       </div>
-       <div class="page cover-front" onclick="movePage(this, 8)"></div>
+       <div class="page text-page" onclick="movePage(this, 8)"></div>
       <div class="page text-page" onclick="movePage(this, 9)">
         <p>
          i looooooooooooovvvvvvvvvvveeeeeeeeeeeee youuu so much anjali❤️ anjali❤️
@@ -133,7 +133,7 @@
           soch bhi kaise liya😭
         </p>
       </div>
-       <div class="page cover-front" onclick="movePage(this, 10)"></div>
+       <div class="page text-page" onclick="movePage(this, 10)"></div>
        <div class="page text-page">
         <p>
           bss juhi❤️ yahi bolunga ki bht pyaar krta tha,hu or rahunga aapse <br>
