--- a/book.html
+++ b/book.html
@@ -30,7 +30,7 @@
         <br>
         <h2>@_.StarRy_.</h2>
       </div>
-      <div class="page text-page" onclick="movePage(this, 2)"></div>
+      <div class="page cover-front" onclick="movePage(this, 2)"></div>
       <div class="page text-page" onclick="movePage(this, 3)">
         <p>Dear juhi❤️, this is for you 🤞💖</p>
         <p>
