--- a/book.html
+++ b/book.html
@@ -146,6 +146,12 @@
         <br />
         <img src="https://media.tenor.com/zGm5acSjHCIAAAAM/cat-begging.gif" />
         <button id="botao1">Yes yes starRy🥺</button>
+      </div><div class="page text-page" onclick="movePage(this, 8)">
+        Hey motu 👀 this is for you ❤️
+ Ek ladka jo puri tarh pgl hai 🤧
+Chote chote bat pe gussa karna 😌 naraj hona uff tera mood swings 😁
+To.. baat usa din se lake ajj ki jab tune mujhe hi ka msg kiya tha or ab tera upar essay likhne tk ki ki baat
+Pata nai tune kya socha ke msg kiya tha 😂 .......
       </div>
       <div class="page"></div>
       <div class="page"></div>
