--- a/book.html
+++ b/book.html
@@ -132,7 +132,7 @@
           soch bhi kaise liya😭
         </p>
       </div>
-      <div class="page text-page">
+      ,<!--<div class="page text-page">
         <p>
           bss juhi❤️ yahi bolunga ki bht pyaar krta tha,hu or rahunga aapse <br>
           apni aakhri saas takk. juhi❤️ i love u bht saara bss aap meri ladai dekhte ho kbhi mera pyaar dekha hai, 
@@ -146,7 +146,7 @@
         <br />
         <img src="https://media.tenor.com/zGm5acSjHCIAAAAM/cat-begging.gif" />
         <button id="botao1">Yes yes starRy🥺</button>
-      </div><div class="page text-page" onclick="movePage(this, 8)">
+      </div>--><div class="page text-page" onclick="movePage(this, 7)">
         Hey motu 👀 this is for you ❤️
  Ek ladka jo puri tarh pgl hai 🤧
 Chote chote bat pe gussa karna 😌 naraj hona uff tera mood swings 😁
