--- a/book.html
+++ b/book.html
@@ -138,7 +138,8 @@
 Chote chote bat pe gussa karna 😌 naraj hona uff tera mood swings 😁
 To.. baat usa din se lake ajj ki jab tune mujhe hi ka msg kiya tha or ab tera upar essay likhne tk ki ki baat
 Pata nai tune kya socha ke msg kiya tha 😂 .......
-      </div><div class="page text-page">
+      </div>
+      <div class="page text-page">
         <p>
           bss juhi❤️ yahi bolunga ki bht pyaar krta tha,hu or rahunga aapse <br>
           apni aakhri saas takk. juhi❤️ i love u bht saara bss aap meri ladai dekhte ho kbhi mera pyaar dekha hai, 
@@ -150,8 +151,8 @@ Pata nai tune kya socha ke msg kiya tha 😂 .......
         <h2> juhi❤️ ji please accept my request🥹</h2>
         <h2>and reply on this post</h2>
         <br />
-        <img src="https://media.tenor.com/zGm5acSjHCIAAAAM/cat-begging.gif" />
-        <button id="botao1">Yes yes starRy🥺</button>
+        <img src="https://media.tenor.com/zGm5acSjHCIAAAAM/cat-begging.gif"/>
+       
       </div>
       <div class="page"></div>
       <div class="page"></div>
