--- a/book.html
+++ b/book.html
@@ -139,7 +139,7 @@ Chote chote bat pe gussa karna 😌 naraj hona uff tera mood swings 😁
 To.. baat usa din se lake ajj ki jab tune mujhe hi ka msg kiya tha or ab tera upar essay likhne tk ki ki baat
 Pata nai tune kya socha ke msg kiya tha 😂 .......
       </div>
-      <div class="page text-page">
+      <div class="page text-page" oneclick="movePage(this,8)">
         <p>
           bss juhi❤️ yahi bolunga ki bht pyaar krta tha,hu or rahunga aapse <br>
           apni aakhri saas takk. juhi❤️ i love u bht saara bss aap meri ladai dekhte ho kbhi mera pyaar dekha hai, 
@@ -152,7 +152,6 @@ Pata nai tune kya socha ke msg kiya tha 😂 .......
         <h2>and reply on this post</h2>
         <br />
         <img src="https://media.tenor.com/zGm5acSjHCIAAAAM/cat-begging.gif"/>
-       
       </div>
       <div class="page"></div>
       <div class="page"></div>
