--- a/book.html
+++ b/book.html
@@ -139,7 +139,13 @@ Chote chote bat pe gussa karna 😌 naraj hona uff tera mood swings 😁
 To.. baat usa din se lake ajj ki jab tune mujhe hi ka msg kiya tha or ab tera upar essay likhne tk ki ki baat
 Pata nai tune kya socha ke msg kiya tha 😂 .......
       </div>
-      <div class="page text-page" oneclick="movePage(this,8)">
+      <div class="page text-page" onclick="movePage(this, 8)">
+      </div>
+      <div class="page text-page" onclick="movePage(this, 9)">
+        Oops mai to bhula he gai ki tera pass sochna ke liye dimag he nai hai 😁 mai to ye socha rhi thi ki ek dimaag wali khali dimaag wale se itni bakwas kaise kr sakte hai fir math ka rule yaad aa gaya 🙃 nigative attract positive 🤧
+
+ Aab kya likhu tera upar likha ne ko to pura granth likha du fir socha 😁😁 tum bhav bohut khayega ise liya likha ne ka plan cancel kr diya 😏 </div>
+     <!-- <div class="page text-page" oneclick="movePage(this,9)">
         <p>
           bss juhi❤️ yahi bolunga ki bht pyaar krta tha,hu or rahunga aapse <br>
           apni aakhri saas takk. juhi❤️ i love u bht saara bss aap meri ladai dekhte ho kbhi mera pyaar dekha hai, 
@@ -149,10 +155,8 @@ Pata nai tune kya socha ke msg kiya tha 😂 .......
         <p>You are My Everything StarRy💖.</p>
 
         <h2> juhi❤️ ji please accept my request🥹</h2>
-        <h2>and reply on this post</h2>
-        <br />
-        <img src="https://media.tenor.com/zGm5acSjHCIAAAAM/cat-begging.gif"/>
-      </div>
+        <h2>and reply on this post</h2>-->
+      </div>->>
       <div class="page"></div>
       <div class="page"></div>
       <div class="page"></div>
