--- a/book.html
+++ b/book.html
@@ -155,8 +155,8 @@ Pata nai tune kya socha ke msg kiya tha 😂 .......
         <p>You are My Everything StarRy💖.</p>
 
         <h2> juhi❤️ ji please accept my request🥹</h2>
-        <h2>and reply on this post</h2>-->
-      </div>->>
+        <h2>and reply on this post</h2>
+    </div>-->
       <div class="page"></div>
       <div class="page"></div>
       <div class="page"></div>
