--- a/book.html
+++ b/book.html
@@ -144,19 +144,9 @@ Pata nai tune kya socha ke msg kiya tha 😂 .......
       <div class="page text-page" onclick="movePage(this, 9)">
         Oops mai to bhula he gai ki tera pass sochna ke liye dimag he nai hai 😁 mai to ye socha rhi thi ki ek dimaag wali khali dimaag wale se itni bakwas kaise kr sakte hai fir math ka rule yaad aa gaya 🙃 nigative attract positive 🤧
 
- Aab kya likhu tera upar likha ne ko to pura granth likha du fir socha 😁😁 tum bhav bohut khayega ise liya likha ne ka plan cancel kr diya 😏 </div>
-     <!-- <div class="page text-page" oneclick="movePage(this,9)">
-        <p>
-          bss juhi❤️ yahi bolunga ki bht pyaar krta tha,hu or rahunga aapse <br>
-          apni aakhri saas takk. juhi❤️ i love u bht saara bss aap meri ladai dekhte ho kbhi mera pyaar dekha hai, 
-          kitta krta hu 🥺 , once again i love you juhi💖
-        </p>
-        <p>......This is Not limited here</p>
-        <p>You are My Everything StarRy💖.</p>
-
-        <h2> juhi❤️ ji please accept my request🥹</h2>
-        <h2>and reply on this post</h2>
-    </div>-->
+ Aab kya likhu tera upar likha ne ko to pura granth likha du fir socha 😁😁 tum bhav bohut khayega ise liya likha ne ka plan cancel kr diya 😏
+      </div>
+  
       <div class="page"></div>
       <div class="page"></div>
       <div class="page"></div>
@@ -252,11 +242,7 @@ Pata nai tune kya socha ke msg kiya tha 😂 .......
       <div class="page"></div>
     </div>
 
-    <script>
-      document.getElementById("botao1").addEventListener("click", function () {
-        alert("you're always in my heart juhi❤️ , Drop a Message when you are Free ..");
-      });
-    </script>
+    
     <script src="ashish.js"></script>
   </body>
 </html>
