--- a/book.html
+++ b/book.html
@@ -139,7 +139,7 @@ Chote chote bat pe gussa karna 😌 naraj hona uff tera mood swings 😁
 To.. baat usa din se lake ajj ki jab tune mujhe hi ka msg kiya tha or ab tera upar essay likhne tk ki ki baat
 Pata nai tune kya socha ke msg kiya tha 😂 .......
       </div>
-      <div class="page text-page" onclick="movePage(this, 8)">
+      <div class="page cover-front" onclick="movePage(this, 8)">
       </div>
       <div class="page text-page" onclick="movePage(this, 9)">
         Oops mai to bhula he gai ki tera pass sochna ke liye dimag he nai hai 😁 mai to ye socha rhi thi ki ek dimaag wali khali dimaag wale se itni bakwas kaise kr sakte hai fir math ka rule yaad aa gaya 🙃 nigative attract positive 🤧
