--- a/book.html
+++ b/book.html
@@ -53,7 +53,8 @@
         <br /><br /><br />
         <p>Please trun the page..</p>
       </div>
-      <div class="page text-page" onclick="movePage(this, 4)">
+      <div class="page cover-front" onclick="movePage(this, 4)"></div>
+      <div class="page text-page" onclick="movePage(this, 5)">
         <p>
           tera na meri life mai aana or aake aise bass jana <br>
           you know what jb bhi aap mujhse ladte ho ya naraj hote ho <br>
@@ -73,7 +74,8 @@
        
         
       </div>
-      <div class="page text-page" onclick="movePage(this, 5)">
+      <div class="page cover-front" onclick="movePage(this, 6)"></div>
+      <div class="page text-page" onclick="movePage(this, 7)">
         <p>
           𝑨𝑩 𝑲𝑼𝑪𝑯 𝑺𝑨𝒀𝑨𝑹𝑰 𝑭𝑶𝑹 𝒀𝑶𝑼 <br>
           tareef  bta mai teri karu ya tujhe banane vale ki
@@ -107,7 +109,8 @@
           because god gifted me you😭🤞
         </p>
       </div>
-      <div class="page text-page" onclick="movePage(this, 6)">
+      <div class="page cover-front" onclick="movePage(this, 8)"></div>
+      <div class="page text-page" onclick="movePage(this, 9)">
         <p>
          i looooooooooooovvvvvvvvvvveeeeeeeeeeeee youuu so much anjali❤️ anjali❤️
          <br>
@@ -132,7 +135,8 @@
           soch bhi kaise liya😭
         </p>
       </div>
-      <div class="page text-page" onclick="movePage(this, 7)">
+      <div class="page cover-front" onclick="movePage(this, 10)"></div>
+      <div class="page text-page" onclick="movePage(this, 11)">
         Hey motu 👀 this is for you ❤️
  Ek ladka jo puri tarh pgl hai 🤧
 Chote chote bat pe gussa karna 😌 naraj hona uff tera mood swings 😁
